[gd_scene load_steps=5 format=3 uid="uid://phcl75naqfnw"]

[ext_resource type="Script" path="res://view/TimerGroupView/timer_group_view.gd" id="1_fyq25"]
[ext_resource type="PackedScene" uid="uid://chh3v0bh3n3dd" path="res://component/navbar/nav_bar.tscn" id="2_aei0t"]
[ext_resource type="PackedScene" uid="uid://qf8aqhi472jp" path="res://component/timer_group_list/timer_group_list.tscn" id="3_4ics3"]
[ext_resource type="Texture2D" uid="uid://6v0n06pl4kgd" path="res://asset/img/button-add.png" id="3_q7q7x"]

[node name="TimerGroupView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fyq25")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NavBar" parent="VBoxContainer" instance=ExtResource("2_aei0t")]
unique_name_in_owner = true
layout_mode = 2

[node name="TimerGroupList" parent="VBoxContainer" instance=ExtResource("3_4ics3")]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="AddTimerButton" type="Button" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
text = "Add Timer"
icon = ExtResource("3_q7q7x")

[connection signal="pressed" from="VBoxContainer/MarginContainer/AddTimerButton" to="." method="_on_add_timer_button_pressed"]
